fix mobile nav collapse trigger

--- a/_sass/utilities/responsive.scss
+++ b/_sass/utilities/responsive.scss
@@ -43,7 +43,7 @@
         display: block;
         cursor: pointer;
         position: absolute;
-        top: calc((50px / 2) - (35px / 2) + 25px);
+        top: 32.5px;
         right: 25px;
 
         &:after {
